<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.Cinnamon.Layout.Vertical"
    android:layout_height="match_parent"
    tools:context="io.ashdavies.cinnamon.account.AccountActivity">

  <ImageView
      android:contentDescription="@null"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_margin"
      android:src="@mipmap/ic_launcher"/>

  <TextView
      style="@style/Theme.Cinnamon.TextAppearance.Headline"
      android:id="@+id/headline_welcome"
      android:text="@string/account_heading_welcome"/>

  <LinearLayout
      style="@style/Theme.Cinnamon.Button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="0dp"
      android:orientation="vertical">

    <Button
        style="@style/Theme.Cinnamon.Button.Inline"
        android:id="@+id/action_account_google"
        android:drawableStart="@drawable/googleg_standard_color_18"
        android:drawableLeft="@drawable/googleg_standard_color_18"
        android:text="@string/account_action_google"/>

    <Button
        style="@style/Theme.Cinnamon.Button.Inline"
        android:id="@+id/action_account_kraken"
        android:drawableStart="@drawable/ic_kraken"
        android:drawableLeft="@drawable/ic_kraken"
        android:text="@string/account_action_kraken"/>

  </LinearLayout>

</LinearLayout>
