<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

  <android.support.design.widget.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="256dp"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      android:fitsSystemWindows="true">

    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/collapsing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:contentScrim="?attr/colorPrimary"
        app:expandedTitleMarginStart="48dp"
        app:expandedTitleMarginEnd="64dp"
        app:expandedTitleMarginBottom="64dp">

      <android.support.v7.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </android.support.design.widget.CollapsingToolbarLayout>

  </android.support.design.widget.AppBarLayout>

  <android.support.v4.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true"
      app:behavior_overlapTop="64dp"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <android.support.v7.widget.CardView style="@style/Theme.Cinnamon.Card">

        <LinearLayout style="@style/Theme.Cinnamon.Layout.Vertical">

          <TextView
              style="@style/Theme.Cinnamon.TextAppearance.Bold"
              android:text="@string/trade_balance_title"/>

          <TextView
              style="@style/Theme.Cinnamon.TextAppearance.Standard"
              android:id="@+id/trade_balance"/>

          <TextView
              style="@style/Theme.Cinnamon.TextAppearance.Bold"
              android:text="@string/trade_equity_title"/>

          <TextView
              style="@style/Theme.Cinnamon.TextAppearance.Standard"
              android:id="@+id/trade_equity"/>

          <TextView
              style="@style/Theme.Cinnamon.TextAppearance.Bold"
              android:text="@string/used_margin_title"/>

          <TextView
              style="@style/Theme.Cinnamon.TextAppearance.Standard"
              android:id="@+id/used_margin"/>

          <TextView
              style="@style/Theme.Cinnamon.TextAppearance.Bold"
              android:text="@string/free_margin_title"/>

          <TextView
              style="@style/Theme.Cinnamon.TextAppearance.Standard"
              android:id="@+id/free_margin"/>

          <TextView
              style="@style/Theme.Cinnamon.TextAppearance.Bold"
              android:text="@string/margin_level_title"/>

          <TextView
              style="@style/Theme.Cinnamon.TextAppearance.Standard"
              android:id="@+id/margin_level"/>

        </LinearLayout>

      </android.support.v7.widget.CardView>

    </LinearLayout>

  </android.support.v4.widget.NestedScrollView>

  <android.support.design.widget.FloatingActionButton
      android:id="@+id/actions"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|end"
      android:layout_margin="@dimen/default_margin"/>

</android.support.design.widget.CoordinatorLayout>
